objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>Estimated_Weighted_Margin__c</fullName>
        <label>Estimated Weighted Margin</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exclusive_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Booking_Confirms_Report__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AEK7K/view?fv0=&quot;, 
&quot;/00O0K00000AEK7K?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Final Booking Confirm Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Booking Confirms Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fine_Print__c</fullName>
        <inlineHelpText>Label name change - from Fine Print to Important Info (KB 27/02/19)</inlineHelpText>
        <label>Important Information</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Flight_Manifest_Report__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AOxQI/view?fv0=&quot;, 
&quot;/00O0K00000AOxQI?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Flight Manifest Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Manifest Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Ticket_Status_Report__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AOlvN/view?fv0=&quot;, 
&quot;/00O0K00000AOlvN?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Flight Ticketing Status Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Ticket Status Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flights_Max_Nett__c</fullName>
        <label>Flights Max Nett</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flights_Ticketed_by_UJ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flights Ticketed by UJ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Structure__c</fullName>
        <inlineHelpText>Please select either &quot;Group&quot; of &quot;FIT&quot; for the correct group type for this deal.</inlineHelpText>
        <label>Group Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>FIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_TC_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide TC Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highlight_ribbon_PDF_NZ__c</fullName>
        <label>Highlight ribbon PDF - NZ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highlight_ribbon_PDF__c</fullName>
        <description>Used to capture values for the deal pdf 
eg 8 DAY FLY, TOUR &amp; CRUISE</description>
        <inlineHelpText>Used to capture values for the deal pdf 
eg 8 DAY FLY, TOUR &amp; CRUISE</inlineHelpText>
        <label>Highlight ribbon PDF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image4Conga__c</fullName>
        <label>Image4Conga</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inclusion_Icons__c</fullName>
        <label>Inclusion Icons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flights</fullName>
                </value>
                <value>
                    <fullName>Cruise</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Tour</fullName>
                </value>
                <value>
                    <fullName>Accom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inclusions__c</fullName>
        <label>Inclusions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accom</fullName>
                </value>
                <value>
                    <fullName>Cruise</fullName>
                </value>
                <value>
                    <fullName>Flights</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Tour</fullName>
                </value>
                <value>
                    <fullName>Transfers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicative_Flight_Pricing__c</fullName>
        <inlineHelpText>Please provide an overview of the flight requests for this deal to quickly see if the total deal price will stack up and you can proceed with the deal.</inlineHelpText>
        <label>Indicative Flight Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Escapes__c</fullName>
        <formula>IF(INCLUDES(  deal_type__c  , &apos;stay&apos;)  &amp;&amp;
 ( has_flights__c  = TRUE), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Escapes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PAF_flights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PAF flights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Itinerary_Outline_NZ__c</fullName>
        <label>Itinerary Outline - NZ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Itinerary_Outline_Proofed_NZ__c</fullName>
        <label>Itinerary Outline - Proofed - NZ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Itinerary_Outline_Proofed__c</fullName>
        <inlineHelpText>This field will be completed by the Product Analysts and then used by the Content and Publishing Team.</inlineHelpText>
        <label>Itinerary Outline - Proofed</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Itinerary_Outline__c</fullName>
        <inlineHelpText>Please provide a detailed outline of the summary which the publishing team will expand on.</inlineHelpText>
        <label>Itinerary Outline</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Land_Activity_Report__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AkHMn/view?fv0=&quot;, 
&quot;/00O0K00000AkHMn?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Land Activity Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Land Activity Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Destination_NZ__c</fullName>
        <label>Landing Page Destination - NZ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Mod__c</fullName>
        <label>Last Mod</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatestMarketing_NonRevShare__c</fullName>
        <label>LatestMarketing(Non-RevShare)</label>
        <summarizedField>Marketing_Spend__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Marketing_Spend__c.JV__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Spend__c.Deal__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LatestMarketing_RevShare__c</fullName>
        <label>LatestMarketing(RevShare)</label>
        <summarizedField>Marketing_Spend__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Marketing_Spend__c.JV__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Spend__c.Deal__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead_In_NZ__c</fullName>
        <label>Lead-In % - NZ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_In__c</fullName>
        <label>Lead-In %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Location_breakdown__c</fullName>
        <description>Used to capture values for the deal pdf 
EG
(ex. YANGTZE RIVER • CHENGDU • CHONGQING)</description>
        <inlineHelpText>Used to capture values for the deal pdf 
EG
(ex. YANGTZE RIVER • CHENGDU • CHONGQING)</inlineHelpText>
        <label>Location breakdown PDF</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Miscellaneous__c</fullName>
        <inlineHelpText>Any additional information about the deal the logistics team may need to know e.g. &quot;Merchant books internal flight from Delhi to Goa.&quot;</inlineHelpText>
        <label>Logistics Miscellaneous</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Map_NZ__c</fullName>
        <label>Map NZ</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MarginD__c</fullName>
        <formula>price__c  -  Pkg_Invoice_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MarginD_nz__c</fullName>
        <formula>price_nz__c - Pkg_Invoice_Price_nz__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarginD - NZ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MarginP__c</fullName>
        <formula>price__c /MarginD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MarginP_nz__c</fullName>
        <formula>MarginD_nz__c / price_nz__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin(%) - NZ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_People__c</fullName>
        <inlineHelpText>Please indicate the maximum number of people for this deal.</inlineHelpText>
        <label>Maximum # People</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchant_Code_Reference__c</fullName>
        <inlineHelpText>This field will show on Merchant Confirmation email - eg. use for Deal-specific codes</inlineHelpText>
        <label>Merchant Code/Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Contact_Email__c</fullName>
        <label>Merchant Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Merchant_Email__c</fullName>
        <label>Merchant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Merchant_Logo__c</fullName>
        <label>Merchant Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Merchant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Product Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal</relationshipLabel>
        <relationshipName>Deal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meta_Description_NZ__c</fullName>
        <label>Meta Description - NZ</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Min_Acheived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Min Acheived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Age__c</fullName>
        <description>Allows BDM to choose a minimum age</description>
        <inlineHelpText>PAX age at time of travel</inlineHelpText>
        <label>Minimum Age</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Minimum_Age</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_People__c</fullName>
        <inlineHelpText>Please indicate what the minimum number of people is required for this deal.</inlineHelpText>
        <label>Minimum # People</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRMA_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NRMA_PDF__c</fullName>
        <label>NRMA PDF</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NRMA_START_DATE__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NRMA_Status__c</fullName>
        <label>NRMA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                    <color>#FF0000</color>
                    <label>Expired</label>
                </value>
                <value>
                    <fullName>Hero</fullName>
                    <isActive>false</isActive>
                    <label>Hero</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NZ_Video_Link__c</fullName>
        <label>NZ Video Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Override_Publish_Deal_Esign_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override Publish Deal E-sign Requirement</description>
        <label>Override Publish Deal Esign Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Publish_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows a deal to be publish without the partner E-signing our general terms and conditions</description>
        <inlineHelpText>This allows a deal to be publish without the partner E-signing our general terms and conditions</inlineHelpText>
        <label>Override Publish Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAF_Flight_Request_AU__c</fullName>
        <label>PAF Flight Request # - AU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAF_Flight_Request_NZ__c</fullName>
        <label>PAF Flight Request # - NZ</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAX_Included_per_deal_NZ__c</fullName>
        <label>PAX Included per deal - NZ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAX_included_per_deal__c</fullName>
        <label>PAX included per deal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDF_Image__c</fullName>
        <label>PDF Image</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Tag__c</fullName>
        <label>PDF Tag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLDC__c</fullName>
        <label>PLDC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add Deal Option</fullName>
                </value>
                <value>
                    <fullName>Add Departure Date</fullName>
                </value>
                <value>
                    <fullName>Allocation Addition / Removals</fullName>
                </value>
                <value>
                    <fullName>Change Departure Cities</fullName>
                </value>
                <value>
                    <fullName>Change High Season Surcharge</fullName>
                </value>
                <value>
                    <fullName>Change Minimum or Maximum #</fullName>
                </value>
                <value>
                    <fullName>Close Deal</fullName>
                </value>
                <value>
                    <fullName>Close Departure Date</fullName>
                </value>
                <value>
                    <fullName>Extend Book by Date</fullName>
                </value>
                <value>
                    <fullName>PLDC Layout</fullName>
                </value>
                <value>
                    <fullName>Reactivate Deal</fullName>
                </value>
                <value>
                    <fullName>Remove Deal Option</fullName>
                </value>
                <value>
                    <fullName>Update About The Deal</fullName>
                </value>
                <value>
                    <fullName>Update Fine Print</fullName>
                </value>
                <value>
                    <fullName>Update What You Get</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Itinerary_Day_Arrival_Transfer__c</fullName>
        <inlineHelpText>Please indicate which day of the itinerary this</inlineHelpText>
        <label>Package Itinerary Day#(Arrival Transfer)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Itinerary_Day_Dept_Transfers__c</fullName>
        <inlineHelpText>Please indicate the day in the itinerary that for these departure transfers (e.g. if it&apos;s the second day, please input &quot;2&quot;)</inlineHelpText>
        <label>Package Itinerary Day #(Dept Transfers)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentOff__c</fullName>
        <formula>(typically__c -  price__c)/typically__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PercentOff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pkg_Invoice_Price__c</fullName>
        <label>Pkg Invoice Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pkg_Invoice_Price_nz__c</fullName>
        <label>Pkg Invoice Price - NZ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Platform_TripADeal_or_Wholesaler__c</fullName>
        <inlineHelpText>Please select which customer-facing platform this deal will be available on.</inlineHelpText>
        <label>Platform - TripADeal or Wholesaler</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TAD-AU</fullName>
                </value>
                <value>
                    <fullName>TAD-NZ</fullName>
                </value>
                <value>
                    <fullName>TC</fullName>
                </value>
                <value>
                    <fullName>NRMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select from this lookup your colleague who is the producer for this deal.</inlineHelpText>
        <label>Producer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Sell_Price_incl_flights__c</fullName>
        <inlineHelpText>Please include the proposed sell price which also includes the prices of the flights if they are required.</inlineHelpText>
        <label>Proposed Sell Price (incl flights)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Published_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tripadeal.com.au/deals/&quot;&amp;URL__c,&apos;https://www.tripadeal.com.au/deals/&apos;&amp;URL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_URL_nz__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tripadeal.co.nz/deals/&quot;&amp;URL_NZ__c,&apos;https://www.tripadeal.co.nz/deals/&apos;&amp;URL_NZ__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published URL - NZ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publishing_Status__c</fullName>
        <label>Publishing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Published</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Proofed</fullName>
                </value>
                <value>
                    <fullName>Awaiting Partner Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QTY_Sold__c</fullName>
        <label>QTY Sold</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_of_Sale__c</fullName>
        <formula>Total_QTY_Sold__c / ( TODAY() -  start_date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate of Sale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Real_End_Date__c</fullName>
        <label>Real End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region_NZ__c</fullName>
        <label>Region - NZ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Australia &amp; NZ</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Mediterranean</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>South Pacific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Australia &amp; NZ</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Mediterranean</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>South Pacific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Weeks_On_Sale__c</fullName>
        <formula>(Real_End_Date__c -  TODAY() )/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Weeks On Sale</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Removed_Solo_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Solo Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Go_Live_Date__c</fullName>
        <inlineHelpText>Please select the required go-live date for this deal.</inlineHelpText>
        <label>Required Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Last_Week__c</fullName>
        <label>Sales Last Week</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Send_Merchant_Confirmation_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Merchant Confirmation email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_NZ__c</fullName>
        <label>Start Date - NZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_NZ__c</fullName>
        <label>Status - NZ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Hero</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Hero</fullName>
                </value>
                <value>
                    <fullName>Published(NRMA)</fullName>
                </value>
                <value>
                    <fullName>Published(Staging)</fullName>
                </value>
                <value>
                    <fullName>Hero(Staging)</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_nz__c</fullName>
        <label>Summary - NZ</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sync_to_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to AP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAD_Deal_ID__c</fullName>
        <label>TAD Deal ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Deal_PDF__c</fullName>
        <label>TC Deal PDF</label>
        <type>Url</type>
    </fields>
</CustomObject>